--- a/accounts/templates/accounts/searchpage.html
+++ b/accounts/templates/accounts/searchpage.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static '/css/searchpage.css' %}">
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <link rel="stylesheet" href="{% static '/css/home-content.css' %}">
+    <link rel="stylesheet" href="{% static '/fontawesome/css/all.css' %}">
 
 </head>
 <body class="light slider search-body" id="body">
